# ai-daily-researcher

./: .env.example  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
blog/: index.html
blog/2026-01-02/: index.html
blog/2026-01-05/: index.html
blog/2026-01-06/: index.html
blog/2026-01-07/: index.html
blog/2026-01-08/: index.html
blog/2026-01-09/: index.html
blog/2026-01-12/: index.html
blog/2026-01-13/: index.html
blog/2026-01-14/: index.html
blog/2026-01-15/: index.html
blog/2026-01-16/: index.html
blog/2026-01-17/: index.html
blog/2026-01-18/: index.html
docs/: index.md
docs/blog/: 2026-01-02.md  2026-01-05.md  2026-01-06.md  2026-01-07.md  2026-01-08.md  2026-01-09.md  2026-01-12.md  2026-01-13.md  2026-01-14.md  2026-01-15.md  2026-01-16.md  2026-01-17.md  2026-01-18.md  index.md
search/: search_index.json
src/: app.py  main.py  publish_digest.py  reset_db.py  seed_db.py
src/ai/: processor.py
src/core/: config.py
src/db/: models.py  mongo.py  postgres.py
src/ingestion/: arxiv_client.py  changelog_client.py  rss_client.py
src/services/: research_service.py
src/ui/: components.py  tabs.py  wrappers.py
