[project]
name = "ai-daily-researcher"
version = "0.1.0"
description = "AI-powered daily research paper digest and analysis tool."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.31.0",
    "motor>=3.3.0",
    "beanie>=1.25.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "arxiv>=2.1.0",
    "langchain>=0.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.2.0",
    "greenlet>=3.0.0", # Required for SQLAlchemy async
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "langchain-openai>=1.1.6",
    "langchain-google-genai>=4.1.2",
    "feedparser>=6.0.12",
    "beautifulsoup4>=4.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
